frontend/styles/styles.css
body , html{
    background-color: #ffffff;
    position: relative;
    font-family: Arial, sans-serif;
    margin: 0;
    padding: 0;
    width: 100%;
    height: 100%;
    overflow-x: hidden;

}

.header {
    position: relative;
}
main{
    position: relative;
}

footer{
    position: relative;
    bottom: 0;
    left: 0;
    width: 100%;
    height: 50px; /* Adjust height as needed */
    background-color: #f1f1f1; /* Footer background color */
    text-align: center; /* Center the text */
    padding: 10px; /* Padding for the footer content */
}

.divider {
    background: gray;
    display: flex;
    position: absolute;
    left: 0;
    width: 100%;
    border: none;
    border-top: 1px solid #ccc;
    margin: 0;
}
.product-card .card-divider{
    color: #ccc;
    font-size: 0.8rem;
    position: absolute;
    margin: auto;
    left: 0;
    right: 0;
}

h4 {
    font-size: 1.5rem;
    margin: 0;
    font-weight: 700;
    color: #121212;
    padding-left: 7px;
    padding-top: 5px;
}

.header-content {
    display: flex; /* allows for horizontal alignment */
    justify-content: space-between; /* space between elements */
    align-items: center; /* aligns items vertically in the center */
    gap: 10px;            /* space between elements */
}  

.icon {
    width: 200px;
    max-height: 120px;
}
  
.search-field {
    padding: 8px;
    border: solid 1px gray;
    border-radius: 2px;
    flex-grow: 20; /* makes it stretch if needed */
    width: 1400px;
    max-width: 1300px; /* max width for the search field */
    cursor: text;
    font-size: 1.2rem;
    justify-content: center;
    line-height: 1;
    margin: 0;
    outline: none;
    padding: 1rem 1.2rem;
    text-align: left;
    text-decoration: none;
    transition: box-shadow .2s,-webkit-box-shadow .2s;
    white-space: nowrap;
    user-select: none;
    -webkit-user-select: none;
    touch-action: manipulation;
}

/* button styles ALL*/

.header-content button {
    align-items: center;
    border-radius: 2px;
    gap: 10px;
    cursor: pointer;
    display: inline-flex;
    flex: 1 1 auto;
    font-family: Inter,sans-serif;
    font-size: 1.2rem;
    font-weight: 700;
    justify-content: center;
    line-height: 1;
    margin: 0;
    outline: none;
    padding: 1rem 1.2rem;
    position: relative;
    text-align: center;
    text-decoration: none;
    transition: box-shadow .2s,-webkit-box-shadow .2s;
    white-space: nowrap;
    border: 0;
    user-select: none;
    -webkit-user-select: none;
    touch-action: manipulation;
    max-width: 300px;
}


.sign-in{
    background-color: #ffffff;
    color: #121212;
    border: 1px solid #121212;
}

.cart-button{
    background-color: crimson;
    color: #ffffff;
    border: 1px solid #121212;
    margin-right: 10px;
}

.sign-in:hover{
    background-color: #f3f3f3;
    color: black;
}

.cart-button:hover{
    background-color: rgb(159, 17, 46);
    color: white;
}

.nav-bar {
    display: flex;
    justify-content: left;
    margin-top: 15px;
}

.tab {
    margin: 0 0px;
    padding: 10px 20px;
    cursor: pointer;
    color: gray;
    font-weight: bold;
    position: relative;
    transition: color 0.3s;
}
.tab:hover {
    background-color: #f3f3f3;
    border-radius: 4px;
    color: black;
}
.tab:active {
    background-color: #e0e0e0;
    color: black;
}

.tab.active {
    color: red;
}

.tab.active::after {
    content: "";
    position: relative  ;
    bottom: 0;
    left: 0;
    right: 0;
    margin: auto;
    height: 2px;
    width: 100%;
    background-color: red;
    border-radius: 2px;
}

.category-btn{
    margin: 10px 3px;
    margin-left: 5px;
    padding: 10px 20px;
    cursor: pointer;
    background-color: white;
    color: black;
    font-weight: bold;
    position: relative;
    transition: color 0.3s;
    border: solid 2px gray;
    border-radius: 20px;
}
.category-btn:hover {
    background-color: #f3f3f3;
    color: black;
}
.category-btn:active {
    background-color: #e0e0e0;
    color: black;
}
.category-btn.active {
    color: white;
    background-color: black;
}

.brand-btn{
    margin: 10px 3px;
    margin-left: 5px;
    padding: 10px 20px;
    cursor: pointer;
    background-color: white;
    color: black;
    font-weight: bold;
    position: relative;
    transition: color 0.3s;
    border: solid 2px gray;
    border-radius: 20px;
}
.brand-btn:hover {
    background-color: #f3f3f3;
    color: black;
}
.brand-btn:active {
    background-color: #e0e0e0;
    color: black;
}
.brand-btn.active {
    color: white;
    background-color: black;
}

/* Product Card Styles */

.products-grid {
    display: grid;
    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
    gap: 20px;
    padding: 20px;
    justify-items: center;
    align-items: start;
}

.product-card {
    background-color: #f9f9f9;
    position: relative;
    border: 1px solid #ddd;
    border-radius: 8px;
    padding: 20px;
    text-align: left;
    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
    transition: transform 0.2s, box-shadow 0.2s;
}
.product-card .product-name {
    font-size: 1.2rem;
    font-weight: bold;
    color: #333;
    margin-bottom: 5px;
}
.product-price, .product-desc , .product-instal-price{
    display: block;
    font-size: 0.9rem;
    margin-bottom: 10px;
}
.product-desc{
    background: linear-gradient(to right, #ff8a00, #e52e71);
    -webkit-background-clip: text;
    background-clip: text;
    font-weight: 800;
    color: transparent;
}
.product-price{
    margin-bottom: 10px;
    display: block;
    text-align: right;
    font-weight: 700;
    color: #121212;
    font-size: 0.9rem;
}
.product-instal-price{
    margin-bottom: 10px;
    display: block;
    text-align: right;
    font-weight: 700;
    color: #121212;
    font-size: 0.9rem;
}

.product-card:hover {
    transform: translateY(-5px);
    box-shadow: 0 6px 10px rgba(0, 0, 0, 0.15);
    cursor: pointer;
}

.products-grid .product-card .product-image {
    width: 100%;
    height: auto;
    max-width: 800px;
    max-height: 400px;
    object-fit: cover;
    border-radius: 8px;
}

